# cattrs-ja

./: README.md  pyproject.toml
.github/workflows/: ci.yml
locales/ja/LC_MESSAGES/: basics.po  benchmarking.po  cattrs.gen.po  cattrs.po  cattrs.preconf.po  cattrs.strategies.po  contributing.po  customizing.po  defaulthooks.po  history.po  indepth.po  index.po  modules.po  preconf.po  recipes.po  strategies.po  unions.po  usage.po  validation.po  why.po
scripts/: checkout.py  gettext.sh  html.sh  intl.sh
